[package]
name = 'p-c99e717f-483f-4cb6-a77d-b90367e89cbb'
edition = '2021'
version = '0.1.0'
publish = false
[dependencies.anyhow]
version = '*'
features = []
optional = false

[dependencies.quinn]
version = '0.8.3'
features = []
optional = false

[dependencies.tokio]
version = '*'
features = ['full']
optional = false

[dependencies]
bytes = "1.1.0"
futures-util = "0.3.21"
rcgen = "0.9.2"
rustls = { version = '0.*', features = ['quic'] }
rustls-pemfile = { version = '1.*' }
